yeelight tag change

--- a/src/content/posts/yeelight.mdx
+++ b/src/content/posts/yeelight.mdx
@@ -1,11 +1,12 @@
 ---
-title: "Reviving a Dead Smart Bulb and Bringing It Back to Home Assistant"
-description: "Find out how to configure Spectre."
+title: "How I Brought a Dead Smart Bulb Back to Life (and into Home Assistant)"
+description: "My little experimentation with a (apparently) broken Yeelight smart bulb and some FOSS software"
 image: "../assets/spectre.png"
 createdAt: 12-29-2024
 draft: false
 tags:
   - IoT
+  - Home Assistant
 ---
 Have you ever found an old smart bulb, plugged it in, and... nothing? No light, no flicker, no sign of life. That was exactly my situation. At first, I was ready to toss it, but curiosity got the best of me. A quick search online led me down a rabbit hole of smart bulb repair, where people managed to fix their bulbs by removing faulty LEDs. Intrigued, I decided to give it a shot.
 
